added a way to save losses data to analyze at a later date

--- a/train.ipynb
+++ b/train.ipynb
@@ -13189,6 +13189,25 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('losses.pkl', 'wb') as f:\n",
+    "    pickle.dump(losses, f)"
+   ]
   }
  ],
  "metadata": {
